<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <RelativeLayout
        android:id="@+id/detail_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/flickr_detail_photo_height"
            android:contentDescription="@string/dummy_content_description"
            android:scaleType="centerCrop" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image"
            android:layout_marginBottom="16dp"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingStart="16dp">


            <!-- TITLE SECTION -->
            <TextView
                android:id="@+id/title"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:ellipsize="end"
                android:maxLines="3"
                tools:text="Cool awesome pic!" />


            <!-- DESCRIPTION SECTION -->
            <TextView
                android:id="@+id/description_label"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/flickr_detail_description" />

            <TextView
                android:id="@+id/description"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description_label"
                android:layout_marginTop="@dimen/text_between_lines_margin"
                tools:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum." />


            <!-- Tags AND COMMENTS SECTION -->
            <LinearLayout
                android:id="@+id/tags_comments_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tags"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:gravity="end"
                    tools:text="7419 views" />

                <TextView
                    android:id="@+id/comments"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:gravity="end"
                    tools:text="200 comments" />

            </LinearLayout>


            <!-- DATES SECTION -->
            <LinearLayout
                android:id="@+id/dates_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tags_comments_container"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/posted_date"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:gravity="end"
                    tools:text="Posted\n2016-09-14 20:30:01" />

                <TextView
                    android:id="@+id/taken_date"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:gravity="end"
                    tools:text="Taken\n2016-09-14 20:30:01" />

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>