<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="false"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="enterAlwaysCollapsed"
            app:titleEnabled="false">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:visibility="gone"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

                <FrameLayout
                    android:id="@+id/dummy_focus_catcher"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_layout_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/toolbar"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="16dp"
                    android:hint="@string/toolbar_username_field_hint"
                    android:visibility="visible"
                    app:layout_collapseMode="parallax">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_text_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="text|textNoSuggestions"
                        android:maxLength="100"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/find_button"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_input_layout_username"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="16dp"
                    android:text="@string/toolbar_find_button"
                    app:layout_collapseMode="parallax" />

                <TextView
                    android:id="@+id/progress_indicator"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_below="@id/text_input_layout_username"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:textStyle="italic"
                    android:visibility="gone"
                    app:layout_collapseMode="parallax"
                    tools:text="Loading stuff..." />

            </RelativeLayout>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <include
        layout="@layout/content_flickr_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <RelativeLayout
        android:id="@+id/empty_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageView
            android:id="@+id/empty_image"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/dummy_content_description"
            tools:src="@drawable/ic_image_black_48dp" />

        <TextView
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/empty_image"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:text="@string/flickr_list_search_user_first"
            android:textColor="@color/textColorSecondary" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>